resolve markers and change search input backgroud color on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,3 +157,14 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.leaflet-marker-icon {
+  background-image: url('/images/marker-icon.png');
+}
+.leaflet-marker-shadow {
+  background-image: url('/images/marker-shadow.png');
+}
+
+.search-input{
+  background-color: #fff;
+}
